GMM_Main/src/objects/Grant_Assessment__c.object
<CustomObject>
    <description>Grant Monitoring - child of Monitoring Assessment object</description>
    <fields>
        <fullName>Assessment_Criteria_Comments__c</fullName>
        <label>Assessment Criteria Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Criteria__c</fullName>
        <label>Assessment Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>New CNCS Recipient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Legal Applicant/Responsible Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Since Last On-Site Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffing Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall Programmatic Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Site Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant Enrollment and Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Changes in Project Design or Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Recipient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenditures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grantee Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete or Late Financial Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Competency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete or Late Progress Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prohibited Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Key Concerns or Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On or More Partners or Subcontractors – TTA Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Determination__c</fullName>
        <label>Determination</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monitoring Assessment</label>
        <referenceTo>Monitoring_Assessment__c</referenceTo>
        <relationshipLabel>Grant Assessments</relationshipLabel>
        <relationshipName>Grant_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Grant Assessment</label>
    <nameField>
        <displayFormat>GA-{0000}</displayFormat>
        <label>Grant Assessment  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assessment_Criteria_Comments_Required</fullName>
        <active>true</active>
        <description>Assessment Criteria Comments Required when Determination != N/A</description>
        <errorConditionFormula>ISBLANK(Assessment_Criteria_Comments__c) &amp;&amp; (ISPICKVAL( Determination__c , &quot;Yes&quot;) || ISPICKVAL( Determination__c , &quot;No&quot;))</errorConditionFormula>
        <errorDisplayField>Assessment_Criteria_Comments__c</errorDisplayField>
        <errorMessage>Please enter Assessment Criteria Comments.</errorMessage>
    </validationRules>
</CustomObject>